# OpticalTracking

./: .gitignore  ExtractionCode.m  README.md  TwoPinAndUltrasound.m  defineBodyFixedFrameFemur_v2.m  defineTrackerFixedFrame.m  main.m  quaternion2euler.m  rotationsAndTranslations.m
example-data/: FE1.csv  FE2.csv  FL.csv  FM.csv  FP.csv  TD.csv  TL.csv  TM.csv  Test2_2022_11_18_144427_001_3d.csv  Test2_2022_11_18_144427_002_3d.csv  Test2_2022_11_18_144427_003_3d.csv  Test2_2022_11_18_144427_004_3d.csv  Test2_2022_11_18_144427_005_3d.csv  Test2_2022_11_18_144427_006_3d.csv  Test2_2022_11_18_144427_007_3d.csv  Test2_2022_11_18_144427_008_3d.csv
matlab/: defineTrackerFixedFrame_v2.m
matlab/certus/: defineBodyFixedFrameTibia_v2.m
matlab/polaris/: DataSync.m  KeyData_v3.m  KeydataOutput.m  LC_read_test.m  LoadCellPeakTester.m  Master_code_03_12_19.m  Vegatestcode04_06_19.asv  Vegatestcode04_06_19.m  Vegatestcode090224.m  Vegatestcode25_11_19.m  Vegatestcode_WIP.m  Write2Excel.m  Write2Excel_lateral group_ACL_study.m  defineBodyFixedFrameFemur_MCL.m  defineBodyFixedFrameFemur_v2.m  defineBodyFixedFrameTibia_v2.m  findTrackerFixedFrames_v2.m
matlab/polaris/Exfix/: CircFit3D.m  Vegatestcode_Spencer_exfix_Femur_050220.m  Vegatestcode_Spencer_exfix_Tibia_050220.m  defineBodyFixedFrameFemur.m  (+6 more)
rust/: .gitignore  Cargo.toml  README.md  image.aux  image.fdb_latexmk  image.fls  image.tex  test
rust/example-data/: FE1.csv  FE2.csv
rust/output/matlab/Test2_2022_11_18_144427/: FE1.csv  FE2.csv
rust/src/: anatomy.rs  frame_of_reference.rs  main.rs  output.rs  parse_csv.rs
(+6 files in other folders)
