[package]
name = "certus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
itertools = "0.11.0"
nalgebra = "0.32.3"
piston_window = "0.131.0"
plotters = "0.3.5"
plotters-piston = "0.3.0"
serde = { version = "1.0.189", features = ["serde_derive"] }
serde_with = "3.4.0"
serde_yaml = "0.9.25"
